Bug 1402737 - Part 1: Remove the ability for LayerManagers to disable complex component alpha cases. r=mattwoodrow, a=ritu